update the sharai khana theme 1.3.4

--- a/greenlife/index.html
+++ b/greenlife/index.html
@@ -186,7 +186,7 @@
                     <p>
                       First of all, thanks a lot for purchasing our theme. We hope you will like the WordPress theme, and it would be great if you can spare a minute to rate it. Finally, If you need any support regarding our theme, please feel free to contact us via our profile
                                                                                                                                                                                                                                                                     page
-                      <a href="https://themeforest.net/user/essentialwebapps#contact" target="_blank">http://themeforest.net/user/essentialwebapps#contact</a>
+                      <a href="https://themeforest.net/user/essentialwebapps#contact" target="_blank">https://themeforest.net/user/essentialwebapps#contact</a>
                     </p>
                   </div>
                 </section>
@@ -1729,7 +1729,7 @@
                     <a href="img/installation/4.jpg" class="venobox"><img class="img-fluid" src="img/74.jpg" alt="doc_img" /></a>
                   </div>
                   <p>4. Now you should see all the added new products in the front end <em>Store/Shop Page</em></p>
-                  <p>5. if you want to use WooCommerce as an advance user then refer this link <a href="http://docs.woothemes.com/documentation/plugins/woocommerce/" target="_blank">WooCommerce Docs</a> , you'll have all the things as an advance use</p>
+                  <p>5. if you want to use WooCommerce as an advance user then refer this link <a href="https://docs.woothemes.com/documentation/plugins/woocommerce/" target="_blank">WooCommerce Docs</a> , you'll have all the things as an advance use</p>
                 </section>
 
                 <!-- Menu Setup Section  -->
@@ -1939,7 +1939,7 @@
                           <!--//icon-holder-->
                           <div class="content">
                             <h4 class="callout-title">Note:</h4>
-                            <p>Not sure about country and language code? Get your <a href="http://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Country-Codes.html#Country-Codes" target="_blank">Country Code </a> and <a href="http://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Usual-Language-Codes.html#Usual-Language-Codes" target="_blank">Language code</a>.</p>
+                            <p>Not sure about country and language code? Get your <a href="https://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Country-Codes.html#Country-Codes" target="_blank">Country Code </a> and <a href="https://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Usual-Language-Codes.html#Usual-Language-Codes" target="_blank">Language code</a>.</p>
                           </div>
                           <!--//content-->
                         </div>
@@ -2170,7 +2170,7 @@
                     <h3 class="block-title">Sources and Credits</h3>
 
                     <ol>
-                      <li><a href="http://www.jquery.com/">jQuery Plugin</a><br /></li>
+                      <li><a href="https://www.jquery.com/">jQuery Plugin</a><br /></li>
                       <li><a href="fontawesome.io/">Font Awesome</a><br /></li>
                     </ol>
                   </div>
@@ -2529,7 +2529,7 @@
       <div class="container">
         <div class="row">
           <div class="col-6 text-left">
-            <span>Copyright &copy; 2021 - <a href="https://bluewindlab.net" target="_blank" class="text-info">BlueWindLab</a>. All Rights Reserved.</span>
+            <span>Copyright &copy; 2023 - <a href="https://bluewindlab.net" target="_blank" class="text-info">BlueWindLab</a>. All Rights Reserved.</span>
           </div>
           <div class="col-6 text-right">
             <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
