--- a/reddrop_buddies/index.html
+++ b/reddrop_buddies/index.html
@@ -154,7 +154,7 @@
                       <li>
                         <strong>Web Site:
                         </strong>
-                        <a href="http://bluewindlab.net/" target="_blank">http://bluewindlab.net</a>
+                        <a href="https://bluewindlab.net/" target="_blank">https://bluewindlab.net</a>
                       </li>
                       <li>
                         <strong>Get Premium Support:</strong>
@@ -1908,7 +1908,7 @@
                         </div>
 
                         <p><strong class="steps">Step 04:</strong> Now you should see all the added new products in the front end <em>Store/Shop Page</em>.</p>
-                        <p><strong class="steps">Step 05:</strong> if you want to use WooCommerce as an advance user then refer this link <a href="http://docs.woothemes.com/documentation/plugins/woocommerce/" target="_blank">WooCommerce Docs</a> , you'll have all the things as an advance user.</p>
+                        <p><strong class="steps">Step 05:</strong> if you want to use WooCommerce as an advance user then refer this link <a href="https://docs.woothemes.com/documentation/plugins/woocommerce/" target="_blank">WooCommerce Docs</a> , you'll have all the things as an advance user.</p>
                       </div>
                     </div>
                   </div>
@@ -2084,7 +2084,7 @@
                           <!--//icon-holder-->
                           <div class="content">
                             <h4 class="callout-title">Note:</h4>
-                            <p>Not sure about country and language code? Get your <a href="http://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Country-Codes.html#Country-Codes" target="_blank">Country Code </a> and <a href="http://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Usual-Language-Codes.html#Usual-Language-Codes" target="_blank">Language code</a>.</p>
+                            <p>Not sure about country and language code? Get your <a href="https://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Country-Codes.html#Country-Codes" target="_blank">Country Code </a> and <a href="https://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Usual-Language-Codes.html#Usual-Language-Codes" target="_blank">Language code</a>.</p>
                           </div>
                           <!--//content-->
                         </div>
@@ -2461,14 +2461,14 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <ol>
-                          <li><a href="http://getbootstrap.com/">Bootstrap</a><br /></li>
-                          <li><a href="http://www.jquery.com/">jQuery Plugin</a><br /></li>
-                          <li><a href="http://fortawesome.github.io/Font-Awesome/">Owl Carousel</a><br /></li>
+                          <li><a href="https://getbootstrap.com/">Bootstrap</a><br /></li>
+                          <li><a href="https://www.jquery.com/">jQuery Plugin</a><br /></li>
+                          <li><a href="https://fortawesome.github.io/Font-Awesome/">Owl Carousel</a><br /></li>
                           <li><a href="https://www.google.com/fonts">Google Fonts</a><br /></li>
                           <li><a href="fontawesome.io/">Font Awesome</a><br /></li>
                           <li><a href="https://maps.googleapis.com/maps/api/js?sensor=false&amp;ver=1.0">Google Maps API</a><br /></li>
-                          <li><a href="http://freepik.com/ ">Freepik.com</a><br /></li>
-                          <li><a href="http://pexels.com/">Pexels.com</a></li>
+                          <li><a href="https://freepik.com/ ">Freepik.com</a><br /></li>
+                          <li><a href="https://pexels.com/">Pexels.com</a></li>
                         </ol>
                       </div>
                     </div>
@@ -2701,7 +2701,7 @@
       <div class="container">
         <div class="row">
           <div class="col-6 text-left">
-            <span>Copyright &copy; 2021 - <a href="https://bluewindlab.net" target="_blank" class="text-info">BlueWindLab</a>. All Rights Reserved.</span>
+            <span>Copyright &copy; 2023 - <a href="https://bluewindlab.net" target="_blank" class="text-info">BlueWindLab</a>. All Rights Reserved.</span>
           </div>
           <div class="col-6 text-right">
             <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
