--- a/restore/index.html
+++ b/restore/index.html
@@ -225,7 +225,7 @@
                     <p>
                       First of all, thanks a lot for purchasing our theme. We hope you will like the WordPress theme, and it would be great if you can spare a minute to rate it. Finally, If you need any support regarding our theme, please feel free to contact us via our profile
                                                                                                                                                                                                                                                                     page
-                      <a href="https://themeforest.net/user/essentialwebapps#contact" target="_blank">http://themeforest.net/user/essentialwebapps#contact</a>
+                      <a href="https://themeforest.net/user/essentialwebapps#contact" target="_blank">https://themeforest.net/user/essentialwebapps#contact</a>
                     </p>
                   </div>
                 </section>
@@ -2924,7 +2924,7 @@
                         <p>
                           <strong class="steps">Step 05:</strong>
                           if you want to use WooCommerce as an advance user then refer this link
-                          <a href="http://docs.woothemes.com/documentation/plugins/woocommerce/" target="_blank">WooCommerce Docs</a>
+                          <a href="https://docs.woothemes.com/documentation/plugins/woocommerce/" target="_blank">WooCommerce Docs</a>
                           , you will have all the things as an advance user.</p>
                       </div>
                     </div>
@@ -3220,10 +3220,10 @@
                           <div class="content">
                             <h4 class="callout-title">Note</h4>
                             <p>Not sure about country and language code? Get your
-                              <a href="http://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Country-Codes.html#Country-Codes" target="_blank">Country Code
+                              <a href="https://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Country-Codes.html#Country-Codes" target="_blank">Country Code
                               </a>
                               and
-                              <a href="http://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Usual-Language-Codes.html#Usual-Language-Codes" target="_blank">Language code</a>.</p>
+                              <a href="https://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Usual-Language-Codes.html#Usual-Language-Codes" target="_blank">Language code</a>.</p>
                           </div>
                           <!--//content-->
                         </div>
@@ -3806,11 +3806,11 @@
                       <div class="col-md-12 col-12">
                         <ol>
                           <li>
-                            <a href="http://getbootstrap.com/">Bootstrap</a><br/></li>
+                            <a href="https://getbootstrap.com/">Bootstrap</a><br/></li>
                           <li>
-                            <a href="http://www.jquery.com/">jQuery Plugin</a><br/></li>
+                            <a href="https://www.jquery.com/">jQuery Plugin</a><br/></li>
                           <li>
-                            <a href="http://fortawesome.github.io/Font-Awesome/">Owl Carousel</a><br/></li>
+                            <a href="https://fortawesome.github.io/Font-Awesome/">Owl Carousel</a><br/></li>
                           <li>
                             <a href="https://www.google.com/fonts">Google Fonts</a><br/></li>
                           <li>
@@ -3818,9 +3818,9 @@
                           <li>
                             <a href="https://maps.googleapis.com/maps/api/js?sensor=false&amp;ver=1.0">Google Maps API</a><br/></li>
                           <li>
-                            <a href="http://freepik.com/ ">Freepik.com</a><br/></li>
+                            <a href="https://freepik.com/ ">Freepik.com</a><br/></li>
                           <li>
-                            <a href="http://pexels.com/">Pexels.com</a>
+                            <a href="https://pexels.com/">Pexels.com</a>
                           </li>
                         </ol>
                       </div>
@@ -4183,7 +4183,7 @@
 <div class="container">
   <div class="row">
     <div class="col-6 text-left">
-      <span>Copyright &copy; 2021 -
+      <span>Copyright &copy; 2023 -
         <a href="https://bluewindlab.net" target="_blank" class="text-info">BlueWindLab</a>. All Rights Reserved.</span>
     </div>
     <div
