--- a/srcare/index.html
+++ b/srcare/index.html
@@ -163,8 +163,7 @@
                         <a href="https://themeforest.net/item/senior-care-elder-citizen-support-wordpress-theme/20317135/support/contact">Send Message</a>
                       </li>
                       <li>
-                        <strong>Theme Created By</strong>
-                        <a href="https://themeforest.net/user/xenioushk" target="_blank">MD MAHBUB ALAM KHAN</a>
+                        <strong><strong>Developed By:</strong> <a href="1.envato.market/xenioushk" target="_blank">MAHBUB ALAM KHAN</a>
                         &
                         <a href="https://themeforest.net/user/essentialwebapps" target="_blank">AFM JAMAL UDDIN</a>
                       </li>
@@ -2385,7 +2384,7 @@
                         </div>
 
                         <p><strong class="steps">Step 04:</strong> Now you should see all the added new products in the front end <em>Store/Shop Page</em>.</p>
-                        <p><strong class="steps">Step 05:</strong> if you want to use WooCommerce as an advance user then refer this link <a href="http://docs.woothemes.com/documentation/plugins/woocommerce/" target="_blank">WooCommerce Docs</a> , you'll have all the things as an advance user.</p>
+                        <p><strong class="steps">Step 05:</strong> if you want to use WooCommerce as an advance user then refer this link <a href="https://docs.woothemes.com/documentation/plugins/woocommerce/" target="_blank">WooCommerce Docs</a> , you'll have all the things as an advance user.</p>
                       </div>
                     </div>
                   </div>
@@ -2537,7 +2536,7 @@
                           <!--//icon-holder-->
                           <div class="content">
                             <h4 class="callout-title">Note:</h4>
-                            <p>Not sure about country and language code? Get your <a href="http://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Country-Codes.html#Country-Codes" target="_blank">Country Code </a> and <a href="http://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Usual-Language-Codes.html#Usual-Language-Codes" target="_blank">Language code</a>.</p>
+                            <p>Not sure about country and language code? Get your <a href="https://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Country-Codes.html#Country-Codes" target="_blank">Country Code </a> and <a href="https://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Usual-Language-Codes.html#Usual-Language-Codes" target="_blank">Language code</a>.</p>
                           </div>
                           <!--//content-->
                         </div>
@@ -3011,14 +3010,14 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <ol>
-                          <li><a href="http://getbootstrap.com/">Bootstrap</a><br /></li>
-                          <li><a href="http://www.jquery.com/">jQuery Plugin</a><br /></li>
-                          <li><a href="http://fortawesome.github.io/Font-Awesome/">Owl Carousel</a><br /></li>
+                          <li><a href="https://getbootstrap.com/">Bootstrap</a><br /></li>
+                          <li><a href="https://www.jquery.com/">jQuery Plugin</a><br /></li>
+                          <li><a href="https://fortawesome.github.io/Font-Awesome/">Owl Carousel</a><br /></li>
                           <li><a href="https://www.google.com/fonts">Google Fonts</a><br /></li>
                           <li><a href="fontawesome.io/">Font Awesome</a><br /></li>
                           <li><a href="https://maps.googleapis.com/maps/api/js?sensor=false&amp;ver=1.0">Google Maps API</a><br /></li>
-                          <li><a href="http://freepik.com/ ">Freepik.com</a><br /></li>
-                          <li><a href="http://pexels.com/">Pexels.com</a></li>
+                          <li><a href="https://freepik.com/ ">Freepik.com</a><br /></li>
+                          <li><a href="https://pexels.com/">Pexels.com</a></li>
                         </ol>
                       </div>
                     </div>
