--- a/appeal/appeal_theme/index.html
+++ b/appeal/appeal_theme/index.html
@@ -147,7 +147,7 @@
                     <p>
                       First of all, thanks a lot for purchasing our theme. We hope you will like the WordPress theme, and it would be great if you can spare a minute to rate it. Finally, If you need any support regarding our theme, please feel free to contact us via our profile
                                                                                                                                                                                                                                               page
-                      <a href="https://themeforest.net/user/essentialwebapps#contact" target="_blank">http://themeforest.net/user/essentialwebapps#contact</a>
+                      <a href="https://themeforest.net/user/essentialwebapps#contact" target="_blank">https://themeforest.net/user/essentialwebapps#contact</a>
                     </p>
                   </div>
                 </section>
@@ -1359,7 +1359,7 @@
                         <p>
                           <strong class="steps">Step 05:</strong>
                           if you want to use WooCommerce as an advance user then refer this link
-                          <a href="http://docs.woothemes.com/documentation/plugins/woocommerce/" target="_blank">WooCommerce Docs</a>
+                          <a href="https://docs.woothemes.com/documentation/plugins/woocommerce/" target="_blank">WooCommerce Docs</a>
                           , you'll have all the things as an advance user.</p>
                       </div>
                     </div>
@@ -1633,10 +1633,10 @@
                           <div class="content">
                             <h4 class="callout-title">Note:</h4>
                             <p>Not sure about country and language code? Get your
-                              <a href="http://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Country-Codes.html#Country-Codes" target="_blank">Country Code
+                              <a href="https://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Country-Codes.html#Country-Codes" target="_blank">Country Code
                               </a>
                               and
-                              <a href="http://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Usual-Language-Codes.html#Usual-Language-Codes" target="_blank">Language code</a>.</p>
+                              <a href="https://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Usual-Language-Codes.html#Usual-Language-Codes" target="_blank">Language code</a>.</p>
                           </div>
                           <!--//content-->
                         </div>
@@ -2051,11 +2051,11 @@
                     <div class="col-md-12 col-12">
                       <ol>
                         <li>
-                          <a href="http://getbootstrap.com/">Bootstrap</a><br/></li>
+                          <a href="https://getbootstrap.com/">Bootstrap</a><br/></li>
                         <li>
-                          <a href="http://www.jquery.com/">jQuery Plugin</a><br/></li>
+                          <a href="https://www.jquery.com/">jQuery Plugin</a><br/></li>
                         <li>
-                          <a href="http://fortawesome.github.io/Font-Awesome/">Owl Carousel</a><br/></li>
+                          <a href="https://fortawesome.github.io/Font-Awesome/">Owl Carousel</a><br/></li>
                         <li>
                           <a href="https://www.google.com/fonts">Google Fonts</a><br/></li>
                         <li>
@@ -2063,9 +2063,9 @@
                         <li>
                           <a href="https://maps.googleapis.com/maps/api/js?sensor=false&amp;ver=1.0">Google Maps API</a><br/></li>
                         <li>
-                          <a href="http://freepik.com/ ">Freepik.com</a><br/></li>
+                          <a href="https://freepik.com/ ">Freepik.com</a><br/></li>
                         <li>
-                          <a href="http://pexels.com/">Pexels.com</a>
+                          <a href="https://pexels.com/">Pexels.com</a>
                         </li>
                       </ol>
                     </div>
