--- a/dynamism/index.html
+++ b/dynamism/index.html
@@ -184,7 +184,7 @@
                     <p>
                       First of all, thanks a lot for purchasing our theme. We hope you will like the WordPress theme, and it would be great if you can spare a minute to rate it. Finally, If you need any support regarding our theme, please feel free to contact us via our profile
                                                                                                                                                                                                                                                                                                                                                                                   page
-                      <a href="https://themeforest.net/user/essentialwebapps#contact" target="_blank">http://themeforest.net/user/essentialwebapps#contact</a>
+                      <a href="https://themeforest.net/user/essentialwebapps#contact" target="_blank">https://themeforest.net/user/essentialwebapps#contact</a>
                     </p>
                   </div>
                 </section>
@@ -2466,7 +2466,7 @@
                   <p>
                     <strong class="steps">Step 5:</strong>
                     if you want to use WooCommerce as an advance user then refer this link
-                    <a href="http://docs.woothemes.com/documentation/plugins/woocommerce/" target="_blank">WooCommerce Docs</a>
+                    <a href="https://docs.woothemes.com/documentation/plugins/woocommerce/" target="_blank">WooCommerce Docs</a>
                     ,
                                                                                                                                                                                                                                                                                                                                                 you'll have all the things as an advance user</p>
                 </section>
@@ -2762,11 +2762,11 @@
                             <p>
                               Not sure about country and language code? Get your
 
-                              <a href="http://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Country-Codes.html#Country-Codes" target="_blank">Country Code
+                              <a href="https://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Country-Codes.html#Country-Codes" target="_blank">Country Code
                               </a>
                               and
 
-                              <a href="http://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Usual-Language-Codes.html#Usual-Language-Codes" target="_blank">Language code</a>.
+                              <a href="https://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Usual-Language-Codes.html#Usual-Language-Codes" target="_blank">Language code</a>.
                             </p>
                           </div>
                           <!--//content-->
@@ -3232,7 +3232,7 @@
 
                     <ol>
                       <li>
-                        <a href="http://www.jquery.com/">jQuery Plugin</a><br/></li>
+                        <a href="https://www.jquery.com/">jQuery Plugin</a><br/></li>
                       <li>
                         <a href="fontawesome.io/">Font Awesome</a><br/></li>
                     </ol>
@@ -3592,7 +3592,7 @@
 <div class="container">
   <div class="row">
     <div class="col-6 text-left">
-      <span>Copyright &copy; 2021 -
+      <span>Copyright &copy; 2023 -
         <a href="https://bluewindlab.net" target="_blank" class="text-info">BlueWindLab</a>. All Rights Reserved.</span>
     </div>
     <div
