--- a/petapalozza/index.html
+++ b/petapalozza/index.html
@@ -182,7 +182,7 @@
                     </ul>
                     <p>
                       First of all, thanks a lot for purchasing our theme. We hope you will like the WordPress theme, and it would be great if you can spare a minute to rate it. Finally, If you need any support regarding our theme, please feel free to contact us via our profile page
-                      <a href="https://themeforest.net/user/essentialwebapps#contact" target="_blank">http://themeforest.net/user/essentialwebapps#contact</a>
+                      <a href="https://themeforest.net/user/essentialwebapps#contact" target="_blank">https://themeforest.net/user/essentialwebapps#contact</a>
                     </p>
                   </div>
                 </section>
@@ -1061,7 +1061,7 @@
                       </a>
                     </div>
                     <p><strong class="steps">Step 04:</strong> Now you should see all the added new products in the front end <em>Store/Shop Page</em>.</p>
-                    <p><strong class="steps">Step 05:</strong> if you want to use WooCommerce as an advance user then refer this link <a href="http://docs.woothemes.com/documentation/plugins/woocommerce/" target="_blank">WooCommerce Docs</a> , you'll have all the things as an advance user.</p>
+                    <p><strong class="steps">Step 05:</strong> if you want to use WooCommerce as an advance user then refer this link <a href="https://docs.woothemes.com/documentation/plugins/woocommerce/" target="_blank">WooCommerce Docs</a> , you'll have all the things as an advance user.</p>
                   </div>
                 </section>
 
@@ -1247,7 +1247,7 @@
                             <!--//icon-holder-->
                             <div class="content">
                               <h4 class="callout-title text-light">Note:</h4>
-                              <p class="text-light">Not sure about country and language code? Get your <a href="http://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Country-Codes.html#Country-Codes" target="_blank">Country Code </a> and <a href="http://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Usual-Language-Codes.html#Usual-Language-Codes" target="_blank">Language code</a>.</p>
+                              <p class="text-light">Not sure about country and language code? Get your <a href="https://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Country-Codes.html#Country-Codes" target="_blank">Country Code </a> and <a href="https://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Usual-Language-Codes.html#Usual-Language-Codes" target="_blank">Language code</a>.</p>
                             </div>
                             <!--//content-->
                           </div>
@@ -1533,7 +1533,7 @@
                     <h3 class="block-title">Sources and Credits</h3>
 
                     <ol>
-                      <li><a href="http://www.jquery.com/">jQuery Plugin</a><br /></li>
+                      <li><a href="https://www.jquery.com/">jQuery Plugin</a><br /></li>
                       <li><a href="fontawesome.io/">Font Awesome</a><br /></li>
                     </ol>
                   </div>
