update sharaikhana theme doc and add github static repo

--- a/sharai_khana/index.html
+++ b/sharai_khana/index.html
@@ -3820,5 +3820,5 @@
 <script type="text/javascript" src="assets/js/all.min.js"></script>
 <script type="text/javascript" src="assets/js/main.js"></script>
 <script type="text/javascript" src="assets/js/changelog.js"></script>
-<script type="text/javascript" src="https://projects.bluewindlab.net/product-thumbs/products.js"></script>
+<script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/products.js"></script>
 </body></html>
