--- a/sharai_khana/index.html
+++ b/sharai_khana/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Sharai Khana - Computer Repair & Multi-Concept Professional Services WordPress Theme Documentation"/>
-    <meta name="author" content="Md Mahbub Alam Khan & AFM JAMAL UDDIN"/>
+    <meta name="author" content="Mahbub Alam Khan & AFM JAMAL UDDIN"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="assets/css/all.min.css"/>
-    <link rel="stylesheet" href="assets/css/styles.css"/>
+    <link rel="stylesheet" href="https://xenioushk.github.io/bwl-static-assets/doc-assets/css/all.min.css"/>
+    <link rel="stylesheet" href="https://xenioushk.github.io/bwl-static-assets/doc-assets/css/styles.css"/>
   </head>
 
   <body class="body-green">
@@ -3817,8 +3817,8 @@
 </div>
 <!--//container--></footer><!--//footer--><a id="backTop">Back To Top</a>
 <!-- Main Javascript -->
-<script type="text/javascript" src="assets/js/all.min.js"></script>
-<script type="text/javascript" src="assets/js/main.js"></script>
-<script type="text/javascript" src="assets/js/changelog.js"></script>
+<script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/all.min.js"></script>
+<script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/main.js"></script>
 <script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/products.js"></script>
+<script type="text/javascript" src="assets/js/changelog.js"></script>
 </body></html>
