update theme docs

--- a/appeal/appeal_theme/index.html
+++ b/appeal/appeal_theme/index.html
@@ -10,8 +10,8 @@
     <meta name="description" content="Appeal - Fully Functional Petition Theme Documentation"/>
     <meta name="author" content="Md Mahbub Alam Khan"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="assets/css/all.min.css"/>
-    <link rel="stylesheet" href="assets/css/styles.css"/>
+    <link rel="stylesheet" href="https://xenioushk.github.io/bwl-static-assets/doc-assets/css/all.min.css"/>
+    <link rel="stylesheet" href="https://xenioushk.github.io/bwl-static-assets/doc-assets/css/styles.css"/>
   </head>
 
   <body class="body-green">
