--- a/restore/index.html
+++ b/restore/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="Restore - Computer, Mobile & Digital Repair Service WordPress Theme Documentation"/>
     <meta name="author" content="Md Mahbub Alam Khan & AFM JAMAL UDDIN"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="assets/css/all.min.css"/>
-    <link rel="stylesheet" href="assets/css/styles.css"/>
+    <link rel="stylesheet" href="https://xenioushk.github.io/bwl-static-assets/doc-assets/css/all.min.css"/>
+    <link rel="stylesheet" href="https://xenioushk.github.io/bwl-static-assets/doc-assets/css/styles.css"/>
   </head>
 
   <body class="body-green">
@@ -4194,4 +4194,9 @@
     </div>
   </div>
 </div>
-<!--//container--></footer><!--//footer--><a id="backTop">Back To Top</a><!-- Main Javascript --><script type="text/javascript" src="assets/js/all.min.js"></script><script type="text/javascript" src="assets/js/main.js"></script></body></html>
+<!--//container--></footer><!--//footer--><a id="backTop">Back To Top</a>
+<!-- Main Javascript -->
+<script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/all.min.js"></script>
+<script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/main.js"></script>
+<script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/products.js"></script>
+</body></html>
