--- a/srcare/index.html
+++ b/srcare/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="Senior Care is fully responsive and it ensures that your website will appear well on different screens and devices. Making a website using this theme will be an easy way to attract new consumer. "/>
     <meta name="author" content="Md Mahbub Alam Khan & AFM JAMAL UDDIN"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="assets/css/all.min.css"/>
-    <link rel="stylesheet" href="assets/css/styles.css"/>
+    <link rel="stylesheet" href="https://xenioushk.github.io/bwl-static-assets/doc-assets/css/all.min.css"/>
+    <link rel="stylesheet" href="https://xenioushk.github.io/bwl-static-assets/doc-assets/css/styles.css"/>
   </head>
 
   <body class="body-green">
@@ -3088,11 +3088,10 @@
     <!--//footer-->
 
     <a id="backTop">Back To Top</a>
-
     <!-- Main Javascript -->
-    <script type="text/javascript" src="assets/js/all.min.js"></script>
-    <script type="text/javascript" src="assets/js/main.js"></script>
+    <script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/all.min.js"></script>
+    <script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/main.js"></script>
+    <script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/products.js"></script>
     <script type="text/javascript" src="assets/js/changelog.js"></script>
-    <script type="text/javascript" src="https://projects.bluewindlab.net/product-thumbs/products.js"></script>
   </body>
 </html>
