update the themes doc

--- a/appeal/appeal_theme/index.html
+++ b/appeal/appeal_theme/index.html
@@ -2072,6 +2072,40 @@
                   </div>
                 </div>
               </section>
+
+              <!-- Our Template & Themes Section  -->
+
+              <section id="theme_template_section" class="doc-section">
+                <h2 class="section-title">Our Themes & Templates</h2>
+
+                <div id="wordpress_themes" class="section-block">
+                <div class="row">
+                    <div class="col-md-12 col-12">
+                    <h3 class="block-title">WordPress Themes</h3>
+                    <ol class="our-products list" id="bwl_wp_themes"></ol>
+                    </div>
+                </div>
+                </div>
+
+                <div id="wordpress_plugins" class="section-block">
+                <div class="row">
+                    <div class="col-md-12 col-12">
+                    <h3 class="block-title">WordPress Plugins</h3>
+                    <ol class="our-products list" id="bwl_wp_plugins"></ol>
+                    </div>
+                </div>
+                </div>
+
+                <div id="html5_templates" class="section-block">
+                <div class="row">
+                    <div class="col-md-12 col-12">
+                    <h3 class="block-title">HTML5 Themes</h3>
+                    <ol class="our-products list" id="bwl_html_templates"></ol>
+                    </div>
+                </div>
+                </div>
+            </section>
+
               <!--//doc-section-->
             </div>
             <!--//content-inner-->
