update docs comment tag

--- a/petapalozza/index.html
+++ b/petapalozza/index.html
@@ -25,11 +25,11 @@
               </a>
             </h1>
           </div>
-          <!--//branding-->
+          <!-- branding-->
         </div>
-        <!--//container-->
+        <!-- container-->
       </header>
-      <!--//header-->
+      <!-- header-->
 
       <div class="doc-wrapper">
         <div class="container">
@@ -47,7 +47,7 @@
                     <a class="nav-link scrollto" href="#child_theme_installation" title="Child Theme Installation">Child Theme Installation</a>
                     <a class="nav-link scrollto" href="#import_demo_data" title="Import Demo Data">Import Demo Data</a>
                   </nav>
-                  <!--//nav-->
+                  <!-- nav-->
 
                   <a class="nav-link scrollto sub-menu-sign" href="#theme_option_panel" title="Theme Options Panel">Theme Options Panel</a>
                   <nav class="doc-sub-menu nav flex-column">
@@ -88,7 +88,7 @@
                     <!--<a class="nav-link scrollto" href="#default_header_styling">Default Header Styling</a>-->
                     <!--<a class="nav-link scrollto" href="#bottom_widget_area_styling">Bottom Widget Area Styling</a>-->
                   </nav>
-                  <!--//nav-->
+                  <!-- nav-->
 
                   <a class="nav-link scrollto" href="#wpbakery_page_builder_elements" title="WPBakery Page Builder Elements">WPBakery Page Builder Elements</a>
 
@@ -108,7 +108,7 @@
                     <a class="nav-link scrollto" href="#footer_menu">Footer Menu</a>
                     <!--<a class="nav-link scrollto" href="#one_page_menu">One Page Menu</a>-->
                   </nav>
-                  <!--//nav-->
+                  <!-- nav-->
 
                   <a class="nav-link scrollto sub-menu-sign" href="#widget_settings_section">Widgets Settings</a>
                   <nav class="doc-sub-menu nav flex-column">
@@ -117,7 +117,7 @@
                     <a class="nav-link scrollto" href="#footer_widget_area">Footer Widget</a>
                     <a class="nav-link scrollto" href="#woocommerce_widget_area">WooCommerce Widget</a>
                   </nav>
-                  <!--//nav-->
+                  <!-- nav-->
 
                   <a class="nav-link scrollto sub-menu-sign" href="#support_miscellaneous_section">Support & Miscellaneous</a>
                   <nav class="doc-sub-menu nav flex-column">
@@ -134,16 +134,16 @@
                     <a class="nav-link scrollto" href="#wordpress_plugins">WordPress Plugins</a>
                     <a class="nav-link scrollto" href="#html5_templates">HTML5 Templates</a>
                   </nav>
-                  <!--//nav-->
+                  <!-- nav-->
 
                   <small>
                     <i>Doc Last Update:</i>
                     22/08/2023</small>
                 </nav>
-                <!--//doc-menu-->
+                <!-- doc-menu-->
               </div>
             </div>
-            <!--//doc-sidebar-->
+            <!-- doc-sidebar-->
 
             <div class="doc-content col-md-9 col-12 order-1">
               <div class="content-inner">
@@ -365,17 +365,17 @@
                           <div class="icon-holder">
                             <i class="fas fa-exclamation-triangle text-white"></i>
                           </div>
-                          <!--//icon-holder-->
+                          <!-- icon-holder-->
                           <div class="content">
                             <p>If you are not an expert on customizing the WordPress child theme, you can skip this child theme part.</p>
                           </div>
-                          <!--//content-->
+                          <!-- content-->
                         </div>
-                        <!--//callout-block-->
+                        <!-- callout-block-->
                       </div>
                     </div>
                   </div>
-                  <!--//section-block-->
+                  <!-- section-block-->
 
                   <div class="section-block" id="import_demo_data">
                     <h3 class="block-title">Import Demo Data</h3>
@@ -1143,7 +1143,7 @@
                       </div>
                     </div>
                   </div>
-                  <!--//section-block-->
+                  <!-- section-block-->
 
                   <div id="blog_left_widget_area" class="section-block">
                     <div class="row">
@@ -1166,7 +1166,7 @@
                       </div>
                     </div>
                   </div>
-                  <!--//section-block-->
+                  <!-- section-block-->
 
                   <div id="footer_widget_area" class="section-block">
                     <div class="row">
@@ -1189,7 +1189,7 @@
                       </div>
                     </div>
                   </div>
-                  <!--//section-block-->
+                  <!-- section-block-->
 
                   <div id="woocommerce_widget_area" class="section-block">
                     <div class="row">
@@ -1212,7 +1212,7 @@
                       </div>
                     </div>
                   </div>
-                  <!--//section-block-->
+                  <!-- section-block-->
                 </section>
 
                 <section id="support_miscellaneous_section" class="doc-section">
@@ -1244,14 +1244,14 @@
                             <div class="icon-holder">
                               <i class="fas fa-info-circle text-light"></i>
                             </div>
-                            <!--//icon-holder-->
+                            <!-- icon-holder-->
                             <div class="content">
                               <h4 class="callout-title text-light">Note:</h4>
                               <p class="text-light">Not sure about country and language code? Get your <a href="https://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Country-Codes.html#Country-Codes" target="_blank">Country Code </a> and <a href="https://www.gnu.org/savannah-checkouts/gnu/gettext/manual/html_node/Usual-Language-Codes.html#Usual-Language-Codes" target="_blank">Language code</a>.</p>
                             </div>
-                            <!--//content-->
+                            <!-- content-->
                           </div>
-                          <!--//callout-block-->
+                          <!-- callout-block-->
 
                           <p class="d-none">
                             <a class="btn btn-cta btn-primary venobox" href="https://www.youtube.com/watch?v=EkDV0OhykYY" data-vbtype="video" data-autoplay="true"> <i class="fas fa-play"></i> Check Video Tutorial </a>
@@ -1328,7 +1328,7 @@
                             <div class="icon-holder text-light">
                               <i class="fas fa-info-circle"></i>
                             </div>
-                            <!--//icon-holder-->
+                            <!-- icon-holder-->
                             <div class="content">
                               <p>
                                 We have used <strong><a href="https://1.envato.market/srcare-wp" target="_blank">Senior Care WordPress theme</a></strong> to demonstrate the upgrade process. You can follow the same steps to upgrade this theme.
@@ -1337,11 +1337,11 @@
                                 <a class="btn btn-cta btn-warning venobox" href="https://youtu.be/O2Wfg3tq4R8" data-vbtype="video" data-autoplay="true"> <i class="fas fa-play"></i> Check Video Tutorial </a>
                               </p>
                             </div>
-                            <!--//content-->
+                            <!-- content-->
                           </div>
-                          <!--//callout-block-->
+                          <!-- callout-block-->
                         </div>
-                        <!--//jumbotron-->
+                        <!-- jumbotron-->
                       </div>
                     </div>
 
@@ -1571,19 +1571,19 @@
                   </div>
                   </div>
               </section>
-                <!--//doc-section-->
+                <!-- doc-section-->
               </div>
-              <!--//content-inner-->
+              <!-- content-inner-->
             </div>
-            <!--//doc-content-->
+            <!-- doc-content-->
           </div>
-          <!--//doc-body-->
+          <!-- doc-body-->
         </div>
-        <!--//container-->
+        <!-- container-->
       </div>
-      <!--//doc-wrapper-->
+      <!-- doc-wrapper-->
     </div>
-    <!--//page-wrapper-->
+    <!-- page-wrapper-->
 
     <footer id="footer" class="footer text-center">
       <div class="container">
@@ -1597,9 +1597,9 @@
           </div>
         </div>
       </div>
-      <!--//container-->
+      <!-- container-->
     </footer>
-    <!--//footer-->
+    <!-- footer-->
 
     <a id="backTop">Back To Top</a>
     <!-- Main Javascript -->
